apps/base/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-n8n
  labels:
    trust.cert-manager.io/inject-bundle: "true"
