apps/base/n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: app-n8n
spec:
  forwardAuth:
    address: http://authelia.app-authelia.svc:9091/api/authz/forward-auth?authelia_url=https://auth.cluster.arpa
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: app-n8n

spec:
  entryPoints:
    - websecure

  routes:
    - kind: Rule
      match: Host(`n8n.cluster.arpa`) && PathPrefix(`/webhook/`)
      services:
        - name: n8n
          namespace: app-n8n
          port: http

    - kind: Rule
      match: Host(`n8n.cluster.arpa`) && PathPrefix(`/webhook-test/`)
      services:
        - name: n8n
          namespace: app-n8n
          port: http

    - kind: Rule
      match: Host(`n8n.cluster.arpa`) && PathPrefix(`/webhook-waiting/`)
      services:
        - name: n8n
          namespace: app-n8n
          port: http

    - kind: Rule
      match: Host(`n8n.cluster.arpa`) && PathPrefix(`/form/`)
      services:
        - name: n8n
          namespace: app-n8n
          port: http

    - kind: Rule
      match: Host(`n8n.cluster.arpa`) && PathPrefix(`/form-test/`)
      services:
        - name: n8n
          namespace: app-n8n
          port: http

    - kind: Rule
      match: Host(`n8n.cluster.arpa`) && PathPrefix(`/form-waiting/`)
      services:
        - name: n8n
          namespace: app-n8n
          port: http

    - match: Host(`n8n.cluster.arpa`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
          namespace: app-n8n
      services:
        - name: n8n
          namespace: app-n8n
          port: http
  tls:
    secretName: traefik-tls
